Cambio de BY a POR

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="papelBTN" class="papelBTN" onclick="jugar(papel, opcionCPU)">🖐 PAPEL</div>
             <div id="tijerasBTN" class="tijerasBTN" onclick="jugar(tijeras, opcionCPU)">✌️ TIJERAS</div>
         </div>
-        <p>By <a href="#">Federico Tejedor Llorente</a></p>
+        <p>Por <a href="#">Federico Tejedor Llorente</a></p>
         <p><a href="#">Volver al Portfolio 💼</a></p>
     </div>
     <div id="pantallaFinal" class="pantallaFinal sinPantallaFinal">
