Language update in index.html

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piedra, papel o tijeras – Juego JavaScript</title>
+    <title>Rock, paper, scissors – JavaScript Game</title>
     <link rel="stylesheet" href="master.css">
 </head>
 <body>
     <div class="contentWrapper">
-        <h1>¿Piedra, papel o tijeras?</h1>
+        <h1>Rock, paper or scissors?</h1>
         <div class="gameWrapper">
-            <div id="piedraBTN" class="piedraBTN" onclick="jugar(piedra, opcionCPU)">✊ PIEDRA</div>
-            <div id="papelBTN" class="papelBTN" onclick="jugar(papel, opcionCPU)">🖐 PAPEL</div>
-            <div id="tijerasBTN" class="tijerasBTN" onclick="jugar(tijeras, opcionCPU)">✌️ TIJERAS</div>
+            <div id="piedraBTN" class="piedraBTN" onclick="jugar(piedra, opcionCPU)">✊ ROCK</div>
+            <div id="papelBTN" class="papelBTN" onclick="jugar(papel, opcionCPU)">🖐 PAPER</div>
+            <div id="tijerasBTN" class="tijerasBTN" onclick="jugar(tijeras, opcionCPU)">✌️ SCISSORS</div>
         </div>
-        <p>Por <a href="#">Federico Tejedor Llorente</a></p>
-        <p><a href="#">Volver al Portfolio 💼</a></p>
+        <p>By <a href="#">Federico Tejedor Llorente</a></p>
+        <p><a href="#">Back to Portfolio 💼</a></p>
     </div>
     <div id="pantallaFinal" class="pantallaFinal sinPantallaFinal">
-        <h1 id="tituloDeLaResolucion">Título de la resolución</h1>
-        <div id="volverAJugarBTN" class="volverAJugar" onclick="location.reload()">Volver a jugar</div>
+        <h1 id="tituloDeLaResolucion">Result name</h1>
+        <div id="volverAJugarBTN" class="volverAJugar" onclick="location.reload()">Play again</div>
     </div>
     <script src="master.js"></script>
 </body>
